[tool.poetry]
name = "fastapi-sample"
version = "0.1.0"
description = ""
authors = ["kaito2 <kaito.iwatsuki@nislab.doshisha.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.59.0"
uvicorn = "^0.11.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^19.10b0"
isort = "^5.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
