[tool.poetry]
authors = ["kaito2 <kaito.iwatsuki@nislab.doshisha.ac.jp>"]
description = ""
name = "fastapi-sample"
packages = [
  {include = "src"},
]
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "0.59.0"
python = "^3.8"
requests = "^2.24.0"
uvicorn = "^0.11.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
isort = "^5.1.2"
mypy = "^0.782"
pytest = "^5.4.3"
taskipy = "^1.2.1"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool.taskipy.tasks]
format = '''
isort src tests
black src tests
'''
run = "uvicorn src.main:app --reload"
